--- a/FE/index.html
+++ b/FE/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bisylms - Education HTML5 Responsive Template</title>
+    <title>Artisan underwriting Academy</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
 <script src="https://kit.fontawesome.com/6fd519cc43.js" crossorigin="anonymous"></script>
